WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130160
Incorrect reference counting of Range in WebFrame
https://bugs.webkit.org/show_bug.cgi?id=130160
Summary
Incorrect reference counting of Range in WebFrame
Enrica Casucci
Reported
2014-03-12 15:37:49 PDT
<
rdar://problem/16282535
>
Attachments
Patch
(1.22 KB, patch)
2014-03-12 15:40 PDT
,
Enrica Casucci
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2014-03-12 15:40:57 PDT
Created
attachment 226555
[details]
Patch
Enrica Casucci
Comment 2
2014-03-12 15:46:11 PDT
Committed revision 165502.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug