Incorrect reference counting of Range in WebFrame. https://bugs.webkit.org/show_bug.cgi?id=130160 <rdar://problem/16282535>

Reviewed by Anders Carlsson.

* WebCoreSupport/WebFrameIOS.mm:
(-[WebFrame selectionRects]):



Canonical link: https://commits.webkit.org/148109@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165502 268f45cc-cd09-0410-ab3c-d52691b4dbfc